# lumen-music

./: .gitignore  CMakeLists.txt  CMakePresets.json  LumenMusic.pro  README.md  VinilPlayer.pro
installer/: lumen-music.iss  lumen-player.iss
resources/: app.rc  version.rc.in
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/database/: database.cpp  database.h
src/pages/: addmusicpage.cpp  addmusicpage.h  folderdetailpage.cpp  folderdetailpage.h  folderspage.cpp  folderspage.h  homepage.cpp  homepage.h  likedpage.cpp  likedpage.h  queuepage.cpp  queuepage.h
src/player/: playerbar.cpp  playerbar.h  trackmodel.cpp  trackmodel.h
src/widgets/: hoverplayfilter.h  lumenlogo.h  reorderablelist.h  theme.h
